New: added the new append endpoint for middlegroup
